force-app/main/default/objects/Class__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>College</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>