force-app/main/default/objects/Class__c/fields/Is_Highest__c.field-meta.xml
<CustomField>
    <fullName>Is_Highest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Highest</label>
    <type>Checkbox</type>
</CustomField>